Implement navigation bar with Home and Contact links

--- a/index.html
+++ b/index.html
@@ -72,7 +72,20 @@
       font-size: 14px;
       color: #555;
     }
-  </style>
+  </style>.nav{
+  background:#0b3c5d;
+  padding:12px;
+  text-align:center;
+}
+.nav a{
+  color:white;
+  text-decoration:none;
+  margin:0 15px;
+  font-weight:bold;
+}
+.nav a:hover{
+  text-decoration:underline;
+}
 </head>
 
 <body>
@@ -82,7 +95,10 @@
     <a href="#">Home</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
-  </div>
+  </div> <nav class="nav">
+  <a href="index.html">Home</a>
+  <a href="contact.html">Contact</a>
+  </nav>
 
   <!-- HEADER -->
   <div class="header">
