--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       font-size: 14px;
       color: #555;
     }
-  </style>.nav{
+    .nav{
   background:#0b3c5d;
   padding:12px;
   text-align:center;
@@ -85,7 +85,9 @@
 }
 .nav a:hover{
   text-decoration:underline;
-}
+      }
+  </style>
+
 </head>
 
 <body>
@@ -97,7 +99,7 @@
     <a href="#contact">Contact</a>
   </div> <nav class="nav">
   <a href="index.html">Home</a>
-  <a href="contact.html">Contact</a>
+  <a stylee="contact.html">Contact</a>
   </nav>
 
   <!-- HEADER -->
@@ -121,7 +123,7 @@
     <h2>Ayyukan Mu</h2>
     <p>• Kasuwanci</p>
     <p>• Ayyukan Sabis</p>
-    <p>• Shawarwari da Gudanarwa</p>
+    <p>• Shawarwari dcolorp>
   </div>
 
   <!-- CONTACT -->
