Improve HTML structure and styling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>KUSBAN NIG LTD</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -14,16 +15,20 @@
     /* NAVBAR */
     .nav {
       background-color: #0d47a1;
-      padding: 10px;
+      padding: 12px;
       text-align: center;
     }
 
     .nav a {
       color: white;
       text-decoration: none;
-      margin: 0 10px;
-      font-size: 15px;
+      margin: 0 15px;
       font-weight: bold;
+      font-size: 15px;
+    }
+
+    .nav a:hover {
+      text-decoration: underline;
     }
 
     /* HEADER */
@@ -72,39 +77,21 @@
       font-size: 14px;
       color: #555;
     }
-    .nav{
-  background:#0b3c5d;
-  padding:12px;
-  text-align:center;
-}
-.nav a{
-  color:white;
-  text-decoration:none;
-  margin:0 15px;
-  font-weight:bold;
-}
-.nav a:hover{
-  text-decoration:underline;
-      }
   </style>
-
 </head>
 
 <body>
 
   <!-- MENU -->
   <div class="nav">
-    <a href="#">Home</a>
+    <a href="index.html">Home</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
-  </div> <nav class="nav">
-  <a href="index.html">Home</a>
-  <a stylee="contact.html">Contact</a>
-  </nav>
+  </div>
 
   <!-- HEADER -->
   <div class="header">
-    <img src="logo.png" class="logo">
+    <img src="logo.png" class="logo" alt="KUSBAN NIG LTD Logo">
     <h1>KUSBAN NIG LTD</h1>
     <p>Ingantattun Ayyuka, Amintaccen Kamfani</p>
   </div>
@@ -123,7 +110,7 @@
     <h2>Ayyukan Mu</h2>
     <p>• Kasuwanci</p>
     <p>• Ayyukan Sabis</p>
-    <p>• Shawarwari dcolorp>
+    <p>• Shawarwari</p>
   </div>
 
   <!-- CONTACT -->
