--- a/index.html
+++ b/index.html
@@ -5,93 +5,136 @@
   <title>KUSBAN NIG LTD</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- SEO -->
+  <meta name="description" content="KUSBAN NIG LTD – Ingantattun Ayyuka, Amintaccen Kamfani">
+  <meta name="keywords" content="KUSBAN, Nigeria, Company, Business, Services">
+  <meta name="author" content="KUSBAN NIG LTD">
+
+  <!-- BASIC ACCESSIBILITY -->
+  <meta name="theme-color" content="#0d47a1">
+
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f4f6f8;
+    *{box-sizing:border-box}
+    html{scroll-behavior:smooth}
+
+    body{
+      margin:0;
+      font-family:Arial, Helvetica, sans-serif;
+      background:#f4f6f8;
+      color:#333;
+      line-height:1.6;
     }
 
     /* NAVBAR */
-    .nav {
-      background-color: #0d47a1;
-      padding: 12px;
-      text-align: center;
+    .nav{
+      background:#0d47a1;
+      padding:14px;
+      text-align:center;
+      position:sticky;
+      top:0;
+      z-index:1000;
     }
-
-    .nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-      font-size: 15px;
+    .nav a{
+      color:#fff;
+      text-decoration:none;
+      margin:0 15px;
+      font-weight:bold;
+      font-size:15px;
     }
-
-    .nav a:hover {
-      text-decoration: underline;
-    }
+    .nav a:hover{ text-decoration:underline }
 
     /* HEADER */
-    .header {
-      background-color: #0d47a1;
-      color: white;
-      padding: 25px 15px;
-      text-align: center;
+    .header{
+      background:#0d47a1;
+      color:#fff;
+      text-align:center;
+      padding:50px 20px;
     }
-
-    .logo {
-      width: 100px;
-      margin-bottom: 10px;
+    .logo{
+      width:120px;
+      margin-bottom:10px;
     }
+    .header h1{margin:10px 0 5px}
+    .header p{margin:0}
 
     /* SECTIONS */
-    .section {
-      padding: 20px;
-      background-color: white;
-      margin: 15px;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    .section{
+      background:#fff;
+      margin:18px;
+      padding:24px;
+      border-radius:14px;
+      box-shadow:0 4px 12px rgba(0,0,0,.1);
+    }
+    .section h2{
+      color:#0d47a1;
+      margin-top:0;
     }
 
-    .section h2 {
-      color: #0d47a1;
-      margin-top: 0;
+    /* SERVICES */
+    .services p{
+      margin:10px 0;
+      padding-left:8px;
     }
 
-    .btn {
-      display: block;
-      width: 100%;
-      padding: 14px;
-      background-color: #25D366;
-      color: white;
-      text-align: center;
-      text-decoration: none;
-      border-radius: 25px;
-      font-size: 16px;
-      margin-top: 15px;
+    /* BUTTON */
+    .btn{
+      display:block;
+      width:100%;
+      padding:15px;
+      background:#25D366;
+      color:#fff;
+      text-align:center;
+      text-decoration:none;
+      font-size:16px;
+      border-radius:30px;
+      margin-top:15px;
+      font-weight:bold;
+      border:none;
+      cursor:pointer;
+    }
+    .btn.secondary{ background:#128C7E }
+    .btn:hover{ opacity:.9 }
+
+    /* FORM */
+    .form-group{ margin-bottom:15px }
+    input, textarea{
+      width:100%;
+      padding:12px;
+      border-radius:8px;
+      border:1px solid #ccc;
+      font-size:15px;
+    }
+    textarea{ resize:none }
+
+    /* FOOTER */
+    .footer{
+      text-align:center;
+      padding:18px;
+      font-size:14px;
+      color:#555;
     }
 
-    .footer {
-      text-align: center;
-      padding: 15px;
-      font-size: 14px;
-      color: #555;
+    /* DESKTOP */
+    @media(min-width:768px){
+      .section{ max-width:900px; margin:22px auto }
+      .btn{ width:60%; margin-left:auto; margin-right:auto }
     }
   </style>
 </head>
 
 <body>
 
-  <!-- MENU -->
+  <!-- NAV -->
   <div class="nav">
-    <a href="index.html">Home</a>
+    <a href="#home">Home</a>
     <a href="#about">About</a>
+    <a href="#services">Services</a>
     <a href="#contact">Contact</a>
   </div>
 
   <!-- HEADER -->
-  <div class="header">
-    <img src="logo.png" class="logo" alt="KUSBAN NIG LTD Logo">
+  <div class="header" id="home">
+    <img src="logo.png" alt="KUSBAN NIG LTD Logo" class="logo">
     <h1>KUSBAN NIG LTD</h1>
     <p>Ingantattun Ayyuka, Amintaccen Kamfani</p>
   </div>
@@ -100,30 +143,63 @@
   <div class="section" id="about">
     <h2>Game da Mu</h2>
     <p>
-      KUSBAN NIG LTD kamfani ne da ke bada ingantattun ayyuka
-      domin biyan bukatun abokan hulɗarmu cikin gaskiya da ƙwarewa.
+      KUSBAN NIG LTD kamfani ne da ke bayar da ingantattun ayyuka
+      domin biyan bukatun abokan hulɗa cikin gaskiya, amana da ƙwarewa.
     </p>
   </div>
 
   <!-- SERVICES -->
-  <div class="section">
+  <div class="section services" id="services">
     <h2>Ayyukan Mu</h2>
-    <p>• Kasuwanci</p>
-    <p>• Ayyukan Sabis</p>
-    <p>• Shawarwari</p>
+    <p>✔ Kasuwanci da gudanarwa</p>
+    <p>✔ Ayyukan sabis na zamani</p>
+    <p>✔ Shawarwari da tallafi</p>
   </div>
 
   <!-- CONTACT -->
   <div class="section" id="contact">
     <h2>Tuntube Mu</h2>
-    <a class="btn" href="https://wa.me/2348078607454">
-      Tuntube Mu a WhatsApp
+    <p>Cika form ɗin nan ko ka tuntube mu kai tsaye ta WhatsApp.</p>
+
+    <!-- CONTACT FORM (WhatsApp) -->
+    <form onsubmit="sendWhatsApp(); return false;">
+      <div class="form-group">
+        <input type="text" id="name" placeholder="Sunanka" required>
+      </div>
+      <div class="form-group">
+        <input type="tel" id="phone" placeholder="Lambar Wayarka" required>
+      </div>
+      <div class="form-group">
+        <textarea id="message" rows="4" placeholder="Sakonka" required></textarea>
+      </div>
+      <button class="btn" type="submit">Aika Sako</button>
+    </form>
+
+    <a class="btn secondary" href="https://wa.me/2348078607454">
+      Tuntube Mu kai tsaye a WhatsApp
     </a>
   </div>
 
+  <!-- FOOTER -->
   <div class="footer">
-    © 2026 KUSBAN NIG LTD
+    © 2026 KUSBAN NIG LTD • Duk haƙƙi na kamfani
   </div>
+
+  <!-- JAVASCRIPT -->
+  <script>
+    function sendWhatsApp(){
+      var name = document.getElementById("name").value.trim();
+      var phone = document.getElementById("phone").value.trim();
+      var message = document.getElementById("message").value.trim();
+
+      var text =
+        "Suna: " + name + "%0A" +
+        "Lamba: " + phone + "%0A" +
+        "Sako: " + message;
+
+      window.open("https://wa.me/2348078607454?text=" + text, "_blank");
+    }
+  </script>
 
 </body>
 </html>
