Improve SEO and update layout in index.html
Updated the title and meta description for SEO. Enhanced the layout and styling of sections, including the hero and services sections. Changed the contact form to use email submission instead of WhatsApp.

--- a/index.html
+++ b/index.html
@@ -1,130 +1,105 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>KUSBAN NIG LTD</title>
+  <title>KUSBAN NIG LTD | Professional Services</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- SEO -->
-  <meta name="description" content="KUSBAN NIG LTD – Ingantattun Ayyuka, Amintaccen Kamfani">
-  <meta name="keywords" content="KUSBAN, Nigeria, Company, Business, Services">
-  <meta name="author" content="KUSBAN NIG LTD">
-
-  <!-- BASIC ACCESSIBILITY -->
-  <meta name="theme-color" content="#0d47a1">
+  <meta name="description" content="KUSBAN NIG LTD provides reliable and professional services.">
 
   <style>
     *{box-sizing:border-box}
-    html{scroll-behavior:smooth}
-
     body{
       margin:0;
-      font-family:Arial, Helvetica, sans-serif;
+      font-family:Arial, sans-serif;
       background:#f4f6f8;
       color:#333;
-      line-height:1.6;
     }
+    html{scroll-behavior:smooth}
 
-    /* NAVBAR */
     .nav{
       background:#0d47a1;
       padding:14px;
       text-align:center;
       position:sticky;
       top:0;
-      z-index:1000;
     }
     .nav a{
-      color:#fff;
+      color:white;
       text-decoration:none;
       margin:0 15px;
       font-weight:bold;
-      font-size:15px;
     }
-    .nav a:hover{ text-decoration:underline }
 
-    /* HEADER */
-    .header{
+    .hero{
       background:#0d47a1;
-      color:#fff;
+      color:white;
       text-align:center;
-      padding:50px 20px;
+      padding:60px 20px;
     }
     .logo{
       width:120px;
       margin-bottom:10px;
     }
-    .header h1{margin:10px 0 5px}
-    .header p{margin:0}
 
-    /* SECTIONS */
     .section{
-      background:#fff;
-      margin:18px;
-      padding:24px;
-      border-radius:14px;
-      box-shadow:0 4px 12px rgba(0,0,0,.1);
+      background:white;
+      margin:20px;
+      padding:25px;
+      border-radius:15px;
+      box-shadow:0 6px 18px rgba(0,0,0,.1);
     }
     .section h2{
       color:#0d47a1;
       margin-top:0;
     }
 
-    /* SERVICES */
-    .services p{
-      margin:10px 0;
-      padding-left:8px;
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+      gap:15px;
+    }
+    .card{
+      padding:18px;
+      background:#f9fbff;
+      border-radius:12px;
+      border:1px solid #e0e6ff;
     }
 
-    /* BUTTON */
     .btn{
       display:block;
-      width:100%;
       padding:15px;
-      background:#25D366;
-      color:#fff;
       text-align:center;
+      background:#25D366;
+      color:white;
       text-decoration:none;
-      font-size:16px;
       border-radius:30px;
-      margin-top:15px;
       font-weight:bold;
-      border:none;
-      cursor:pointer;
+      margin-top:15px;
     }
-    .btn.secondary{ background:#128C7E }
-    .btn:hover{ opacity:.9 }
+    .btn.email{background:#0d47a1}
 
-    /* FORM */
-    .form-group{ margin-bottom:15px }
     input, textarea{
       width:100%;
       padding:12px;
-      border-radius:8px;
+      margin-bottom:12px;
+      border-radius:10px;
       border:1px solid #ccc;
       font-size:15px;
     }
-    textarea{ resize:none }
 
-    /* FOOTER */
     .footer{
       text-align:center;
       padding:18px;
       font-size:14px;
       color:#555;
     }
-
-    /* DESKTOP */
-    @media(min-width:768px){
-      .section{ max-width:900px; margin:22px auto }
-      .btn{ width:60%; margin-left:auto; margin-right:auto }
-    }
   </style>
 </head>
 
 <body>
 
-  <!-- NAV -->
+  <!-- NAVIGATION -->
   <div class="nav">
     <a href="#home">Home</a>
     <a href="#about">About</a>
@@ -132,74 +107,59 @@
     <a href="#contact">Contact</a>
   </div>
 
-  <!-- HEADER -->
-  <div class="header" id="home">
-    <img src="logo.png" alt="KUSBAN NIG LTD Logo" class="logo">
+  <!-- HERO SECTION -->
+  <section class="hero" id="home">
+    <img src="logo.png" class="logo" alt="KUSBAN Logo">
     <h1>KUSBAN NIG LTD</h1>
-    <p>Ingantattun Ayyuka, Amintaccen Kamfani</p>
-  </div>
+    <p>Reliable Services, Trusted Company</p>
+  </section>
 
   <!-- ABOUT -->
-  <div class="section" id="about">
-    <h2>Game da Mu</h2>
+  <section class="section" id="about">
+    <h2>About Us</h2>
     <p>
-      KUSBAN NIG LTD kamfani ne da ke bayar da ingantattun ayyuka
-      domin biyan bukatun abokan hulɗa cikin gaskiya, amana da ƙwarewa.
+      KUSBAN NIG LTD is a professional Nigerian company committed
+      to delivering quality services with integrity and excellence.
     </p>
-  </div>
+  </section>
 
   <!-- SERVICES -->
-  <div class="section services" id="services">
-    <h2>Ayyukan Mu</h2>
-    <p>✔ Kasuwanci da gudanarwa</p>
-    <p>✔ Ayyukan sabis na zamani</p>
-    <p>✔ Shawarwari da tallafi</p>
-  </div>
+  <section class="section" id="services">
+    <h2>Our Services</h2>
+    <div class="grid">
+      <div class="card">Business Solutions</div>
+      <div class="card">Professional Services</div>
+      <div class="card">Consulting & Advisory</div>
+      <div class="card">Customer Support</div>
+    </div>
+  </section>
 
   <!-- CONTACT -->
-  <div class="section" id="contact">
-    <h2>Tuntube Mu</h2>
-    <p>Cika form ɗin nan ko ka tuntube mu kai tsaye ta WhatsApp.</p>
+  <section class="section" id="contact">
+    <h2>Contact Us</h2>
 
-    <!-- CONTACT FORM (WhatsApp) -->
-    <form onsubmit="sendWhatsApp(); return false;">
-      <div class="form-group">
-        <input type="text" id="name" placeholder="Sunanka" required>
-      </div>
-      <div class="form-group">
-        <input type="tel" id="phone" placeholder="Lambar Wayarka" required>
-      </div>
-      <div class="form-group">
-        <textarea id="message" rows="4" placeholder="Sakonka" required></textarea>
-      </div>
-      <button class="btn" type="submit">Aika Sako</button>
+    <!-- EMAIL FORM -->
+    <form action="mailto:kusban@gmail.com" method="post" enctype="text/plain">
+      <input type="text" name="Name" placeholder="Your Name" required>
+      <input type="email" name="Email" placeholder="Your Email" required>
+      <textarea name="Message" rows="4" placeholder="Your Message" required></textarea>
+      <button class="btn email" type="submit">Send via Email</button>
     </form>
 
-    <a class="btn secondary" href="https://wa.me/2348078607454">
-      Tuntube Mu kai tsaye a WhatsApp
+    <!-- WHATSAPP BUTTON -->
+    <a class="btn" href="https://wa.me/2348078607454">
+      Chat on WhatsApp
     </a>
-  </div>
+  </section>
 
-  <!-- FOOTER -->
   <div class="footer">
-    © 2026 KUSBAN NIG LTD • Duk haƙƙi na kamfani
+    © <span id="year"></span> KUSBAN NIG LTD
   </div>
 
-  <!-- JAVASCRIPT -->
   <script>
-    function sendWhatsApp(){
-      var name = document.getElementById("name").value.trim();
-      var phone = document.getElementById("phone").value.trim();
-      var message = document.getElementById("message").value.trim();
-
-      var text =
-        "Suna: " + name + "%0A" +
-        "Lamba: " + phone + "%0A" +
-        "Sako: " + message;
-
-      window.open("https://wa.me/2348078607454?text=" + text, "_blank");
-    }
+    document.getElementById("year").textContent =
+      new Date().getFullYear();
   </script>
 
 </body>
-</html>
+</html>     
