--- a/index.html
+++ b/index.html
@@ -1,85 +1,114 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>KUSBAN NIG LTD | Professional Services</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="KUSBAN NIG LTD provides reliable and professional services.">
+  <meta name="description" content="KUSBAN NIG LTD is a trusted Nigerian company delivering professional services with integrity.">
 
   <style>
-    *{box-sizing:border-box}
+    *{box-sizing:border-box;margin:0;padding:0}
     body{
-      margin:0;
-      font-family:Arial, sans-serif;
+      font-family:Arial, Helvetica, sans-serif;
       background:#f4f6f8;
       color:#333;
+      line-height:1.6;
     }
     html{scroll-behavior:smooth}
 
-    .nav{
+    /* NAVBAR */
+    header{
       background:#0d47a1;
-      padding:14px;
-      text-align:center;
       position:sticky;
       top:0;
+      z-index:1000;
     }
-    .nav a{
-      color:white;
+    nav{
+      display:flex;
+      justify-content:center;
+      padding:15px;
+    }
+    nav a{
+      color:#fff;
       text-decoration:none;
       margin:0 15px;
       font-weight:bold;
+      transition:0.3s;
+    }
+    nav a:hover{
+      color:#ffcc00;
     }
 
+    /* HERO */
     .hero{
-      background:#0d47a1;
+      background:linear-gradient(to right,#0d47a1,#1565c0);
       color:white;
       text-align:center;
-      padding:60px 20px;
+      padding:70px 20px;
+      animation:fadeIn 1.5s ease;
     }
     .logo{
       width:120px;
+      margin-bottom:15px;
+    }
+    .hero h1{
+      font-size:32px;
       margin-bottom:10px;
     }
 
-    .section{
+    /* SECTIONS */
+    section{
       background:white;
-      margin:20px;
-      padding:25px;
-      border-radius:15px;
-      box-shadow:0 6px 18px rgba(0,0,0,.1);
+      margin:25px;
+      padding:30px;
+      border-radius:16px;
+      box-shadow:0 8px 20px rgba(0,0,0,.1);
+      animation:slideUp 1s ease;
     }
-    .section h2{
+    section h2{
       color:#0d47a1;
-      margin-top:0;
+      margin-bottom:10px;
     }
 
-    .grid{
+    /* SERVICES */
+    .services{
       display:grid;
       grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
-      gap:15px;
+      gap:20px;
     }
-    .card{
-      padding:18px;
+    .service{
       background:#f9fbff;
-      border-radius:12px;
+      padding:20px;
+      border-radius:14px;
+      text-align:center;
       border:1px solid #e0e6ff;
+      transition:0.3s;
+    }
+    .service:hover{
+      transform:translateY(-5px);
+      box-shadow:0 6px 15px rgba(0,0,0,.15);
     }
 
+    /* BUTTONS */
     .btn{
       display:block;
-      padding:15px;
+      width:100%;
       text-align:center;
-      background:#25D366;
+      padding:15px;
+      border-radius:30px;
       color:white;
       text-decoration:none;
-      border-radius:30px;
       font-weight:bold;
       margin-top:15px;
+      transition:0.3s;
     }
-    .btn.email{background:#0d47a1}
+    .btn:hover{opacity:.85}
+    .whatsapp{background:#25D366}
+    .email{background:#0d47a1}
 
-    input, textarea{
+    /* FORM */
+    input,textarea{
       width:100%;
       padding:12px;
       margin-bottom:12px;
@@ -88,78 +117,89 @@
       font-size:15px;
     }
 
-    .footer{
+    /* FOOTER */
+    footer{
       text-align:center;
-      padding:18px;
+      padding:20px;
       font-size:14px;
       color:#555;
+    }
+
+    /* ANIMATIONS */
+    @keyframes fadeIn{
+      from{opacity:0}
+      to{opacity:1}
+    }
+    @keyframes slideUp{
+      from{transform:translateY(40px);opacity:0}
+      to{transform:translateY(0);opacity:1}
     }
   </style>
 </head>
 
 <body>
 
-  <!-- NAVIGATION -->
-  <div class="nav">
+<header>
+  <nav>
     <a href="#home">Home</a>
     <a href="#about">About</a>
     <a href="#services">Services</a>
     <a href="#contact">Contact</a>
+  </nav>
+</header>
+
+<!-- HERO -->
+<div class="hero" id="home">
+  <img src="logo.png" alt="KUSBAN Logo" class="logo">
+  <h1>KUSBAN NIG LTD</h1>
+  <p>Reliable Services | Trusted Company</p>
+</div>
+
+<!-- ABOUT -->
+<section id="about">
+  <h2>About Us</h2>
+  <p>
+    KUSBAN NIG LTD is a Nigerian company dedicated to providing
+    reliable, professional, and transparent services to individuals
+    and organizations across different sectors.
+  </p>
+</section>
+
+<!-- SERVICES -->
+<section id="services">
+  <h2>Our Services</h2>
+  <div class="services">
+    <div class="service">Business Solutions</div>
+    <div class="service">Professional Services</div>
+    <div class="service">Consulting & Advisory</div>
+    <div class="service">Customer Support</div>
   </div>
+</section>
 
-  <!-- HERO SECTION -->
-  <section class="hero" id="home">
-    <img src="logo.png" class="logo" alt="KUSBAN Logo">
-    <h1>KUSBAN NIG LTD</h1>
-    <p>Reliable Services, Trusted Company</p>
-  </section>
+<!-- CONTACT -->
+<section id="contact">
+  <h2>Contact Us</h2>
 
-  <!-- ABOUT -->
-  <section class="section" id="about">
-    <h2>About Us</h2>
-    <p>
-      KUSBAN NIG LTD is a professional Nigerian company committed
-      to delivering quality services with integrity and excellence.
-    </p>
-  </section>
+  <form action="mailto:kusban@gmail.com" method="post" enctype="text/plain">
+    <input type="text" name="Name" placeholder="Your Name" required>
+    <input type="email" name="Email" placeholder="Your Email" required>
+    <textarea name="Message" rows="4" placeholder="Your Message" required></textarea>
+    <button type="submit" class="btn email">Send Email</button>
+  </form>
 
-  <!-- SERVICES -->
-  <section class="section" id="services">
-    <h2>Our Services</h2>
-    <div class="grid">
-      <div class="card">Business Solutions</div>
-      <div class="card">Professional Services</div>
-      <div class="card">Consulting & Advisory</div>
-      <div class="card">Customer Support</div>
-    </div>
-  </section>
+  <a href="https://wa.me/2348078607454" class="btn whatsapp">
+    Chat on WhatsApp
+  </a>
+</section>
 
-  <!-- CONTACT -->
-  <section class="section" id="contact">
-    <h2>Contact Us</h2>
+<footer>
+  © <span id="year"></span> KUSBAN NIG LTD. All Rights Reserved.
+</footer>
 
-    <!-- EMAIL FORM -->
-    <form action="mailto:kusban@gmail.com" method="post" enctype="text/plain">
-      <input type="text" name="Name" placeholder="Your Name" required>
-      <input type="email" name="Email" placeholder="Your Email" required>
-      <textarea name="Message" rows="4" placeholder="Your Message" required></textarea>
-      <button class="btn email" type="submit">Send via Email</button>
-    </form>
-
-    <!-- WHATSAPP BUTTON -->
-    <a class="btn" href="https://wa.me/2348078607454">
-      Chat on WhatsApp
-    </a>
-  </section>
-
-  <div class="footer">
-    © <span id="year"></span> KUSBAN NIG LTD
-  </div>
-
-  <script>
-    document.getElementById("year").textContent =
-      new Date().getFullYear();
-  </script>
+<script>
+  document.getElementById("year").textContent =
+    new Date().getFullYear();
+</script>
 
 </body>
-</html>     
+</html>
